--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,6 @@
 #overlay {
   position: absolute;
-  height: 100vh;
-  top: calc(4.75rem + 2.625rem + 2.5rem);
+  height: 100%;
   left: 0;
   right: 0;
   bottom: 0;
@@ -9,13 +8,19 @@
   z-index: 2;
 }
 
+#home {
+  height: 70%;
+  position: relative;
+  overflow: hidden;
+}
+
 #home-text-container {
   display: flex;
   color: white;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   z-index: 2;
+  height: 100%;
 }
 
 #home-text {
@@ -23,7 +28,7 @@
   font-size: 3rem;
   text-align: center;
   width: 80%;
-  font-family: 'Spinnaker';
+  font-family: 'Spinnaker', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #background-img {
@@ -34,7 +39,6 @@
   background-size: cover;
   width: 100vw;
   height: 100vh;
-  margin-top: -1rem;
 }
 
 @media (max-width: 30rem) {
